
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-spend-incrementality-lab"
version = "0.1.0"
description = "Estimate true lift from spend changes and package clear incrementality reads for marketers."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
